main2.tf
# create SSH key and associate it to instance
resource "aws_key_pair" "generated" {
  key_name = "MyAWSKey"
  public_key = tls_private_key.generated.public_key_openssh
  lifecycle {
    ignore_changes = [key_name]
  }
}

# Security Groups that allow SSH into instance
resource "aws_security_group" "ingress-ssh" {
  name = "allow-all-ssh"
  vpc_id = aws_vpc.vpc.id
  ingress {
    cidr_blocks = [
      "0.0.0.0/0"
    ]
  from_port = 22
  to_port = 22
  protocol = "tcp"
  }
// Terraform removes the default rule
  egress {
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

# Create Security Group - Web Traffic
resource "aws_security_group" "vpc-web" {
  name = "vpc-web-${terraform.workspace}"
  vpc_id = aws_vpc.vpc.id
  description = "Web Traffic"
  ingress {
    description = "Allow Port 80"
    from_port = 80
    to_port = 80
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    description = "Allow Port 443"
    from_port = 443
    to_port = 443
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    description = "Allow all ip and ports outbound"
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
resource "aws_security_group" "vpc-ping" {
  name = "vpc-ping"
  vpc_id = aws_vpc.vpc.id
  description = "ICMP for Ping Access"
  ingress {
    description = "Allow ICMP Traffic"
    from_port = -1
    to_port = -1
    protocol = "icmp"
    cidr_blocks = ["0.0.0.0/0"]
   }
  egress {
    description = "Allow all ip and ports outboun"
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

# create connection block using key pair module output
resource "aws_instance" "ubuntu_server" {
  ami = data.aws_ami.ubuntu.id
  instance_type = "t2.micro"
  subnet_id = aws_subnet.public_subnets["public_subnet_1
  "].id
  security_groups = [aws_security_group.vpc-ping.id,
  aws_security_group.ingress-ssh.id, aws_security_group.vpc-web.id]
  associate_public_ip_address = true
  key_name = aws_key_pair.generated.key_name
  connection {
    user = "ubuntu"
    private_key = tls_private_key.generated.private_key_pem
    host = self.public_ip
    }
  tags = {
  Name = "Ubuntu EC2 Server"
  }
  lifecycle {
  ignore_changes = [security_groups]
  }
  
  # Leave the first part of the block unchanged and create our `local-exec`provisioner
   provisioner "local-exec" {
    command = "chmod 600 ${local_file.private_key_pem.filename}"
   }

  
  # create remote provisioner that pulls down content from web server
  provisioner "remote-exec" {
    inline = [
    "sudo rm -rf /tmp",
    "sudo git clone https://github.com/hashicorp/demo-terraform-101 /tmp
    ",
    "sudo sh /tmp/assets/setup-web.sh",
    ]
  }

}
